WIP: Fix table 3.3 and split in two

--- a/sections/abstract.tex
+++ b/sections/abstract.tex
@@ -11,4 +11,4 @@ Through a user study with experienced administrators and developers, we observed
 To identify users with similar behavior, we design and train an unsupervised clustering model to group users together and assign ``Roles'' to them. 
 We then build a content-delivery system based on reverse-proxies to route users transparently to their custom debloated web application and report the effectiveness of this system in debloating web applications. 
 
-Lastly, we identify one of the main challenges of debloating web applications to be the collection of representative real world data on web application usage. By building a PHP emulator capable of concolic execution, we perform an offline reachability analysis based on the web server logs to model the users behavior for the given entry points. We then use this information to debloat web applications and demonstrate the performance of concolic execution for debloating to be comparable to the prior dynamic debloating schemes without suffering from their limitations.
+Lastly, we characterize one of the main challenges of debloating web applications to be the collection of representative real world data on web application usage. By building a PHP emulator capable of concolic execution, we perform an offline reachability analysis based on the web server logs to model the users behavior for the given entry points. We then use this information to debloat web applications and demonstrate the performance of concolic execution for debloating to be comparable to the prior dynamic debloating schemes without suffering from their limitations.
